--- a/package.json
+++ b/package.json
@@ -5,55 +5,52 @@
   "dependencies": {
     "classnames": "2.2.6",
     "prop-types": "15.7.2",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-router": "5.0.1",
-    "react-router-dom": "5.0.1",
-    "simplebar": "4.0.0",
-    "simplebar-react": "1.0.0"
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
+    "simplebar": "5.3.0",
+    "simplebar-react": "2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "7.4.5",
-    "@babel/plugin-proposal-class-properties": "7.4.4",
-    "@babel/plugin-proposal-decorators": "7.4.4",
-    "@babel/plugin-proposal-do-expressions": "7.2.0",
-    "@babel/plugin-proposal-export-default-from": "7.2.0",
-    "@babel/plugin-proposal-export-namespace-from": "7.2.0",
-    "@babel/plugin-proposal-function-sent": "7.2.0",
-    "@babel/plugin-proposal-json-strings": "7.2.0",
-    "@babel/plugin-proposal-logical-assignment-operators": "7.2.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "7.4.4",
-    "@babel/plugin-proposal-numeric-separator": "7.2.0",
-    "@babel/plugin-proposal-optional-chaining": "7.2.0",
-    "@babel/plugin-proposal-pipeline-operator": "7.3.2",
-    "@babel/plugin-proposal-throw-expressions": "7.2.0",
-    "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/plugin-syntax-import-meta": "7.2.0",
-    "@babel/preset-env": "7.4.5",
-    "@babel/preset-react": "7.0.0",
-    "@babel/register": "7.4.4",
-    "babel-eslint": "10.0.1",
-    "babel-loader": "8.0.6",
-    "css-loader": "2.1.1",
-    "enzyme": "3.10.0",
-    "enzyme-adapter-react-16": "1.14.0",
-    "eslint": "5.16.0",
-    "eslint-import-resolver-webpack": "0.11.1",
-    "eslint-plugin-import": "2.17.3",
-    "eslint-plugin-react": "7.13.0",
-    "eslint-plugin-react-hooks": "1.6.0",
-    "jest": "24.8.0",
-    "react-test-renderer": "16.8.6",
-    "style-loader": "0.23.1",
-    "webpack": "4.33.0",
-    "webpack-bundle-analyzer": "3.3.2",
-    "webpack-cli": "3.3.3",
-    "webpack-dev-server": "3.7.1"
+    "@storybook/addon-actions": "6.0.22",
+    "@storybook/addon-knobs": "6.0.22",
+    "@storybook/addons": "6.0.22",
+    "@storybook/react": "6.0.22",
+    "@storybook/theming": "6.0.22",
+    "@types/classnames": "2.2.10",
+    "@types/jest": "26.0.14",
+    "@types/react": "16.9.49",
+    "@types/react-dom": "16.9.8",
+    "@types/react-router-dom": "5.1.5",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
+    "css-loader": "4.3.0",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.5",
+    "eslint": "7.10.0",
+    "eslint-import-resolver-webpack": "0.13.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-react": "7.21.3",
+    "eslint-plugin-react-hooks": "4.1.2",
+    "eslint-webpack-plugin": "^2.1.0",
+    "jest": "26.4.2",
+    "node-sass": "4.14.1",
+    "react-test-renderer": "16.13.1",
+    "style-loader": "1.3.0",
+    "terser-webpack-plugin": "^4.2.2",
+    "ts-loader": "8.0.4",
+    "typescript": "4.0.3",
+    "webpack": "4.44.2",
+    "webpack-bundle-analyzer": "3.9.0",
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "3.11.0"
   },
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack --progress --mode development --devtool source-maps",
     "watch": "webpack --watch --progress --mode development --devtool source-maps",
+    "scss": "node-sass --watch scss -o assets/css",
     "test": "jest"
   }
 }
