--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-test-renderer": "16.13.1",
     "style-loader": "1.3.0",
     "terser-webpack-plugin": "^4.2.2",
+    "ts-jest": "26.4.1",
     "ts-loader": "8.0.4",
     "typescript": "4.0.3",
     "webpack": "4.44.2",
@@ -50,6 +51,8 @@
     "start": "webpack-dev-server",
     "build": "webpack --progress --mode development --devtool source-maps",
     "watch": "webpack --watch --progress --mode development --devtool source-maps",
+    "analyze": "webpack --progress --mode development --env.analyze",
+    "storybook": "start-storybook -c storybook -s ./",
     "scss": "node-sass --watch scss -o assets/css",
     "test": "jest"
   }
